@@ -36,7 +36,8 @@ OVERALL TODO
    Add git tag r-1 when switching
    
 * v0.0.5-254 (23 Nov. 2016 - ???) SLOC ?,??? FT ???:?? UT ?
-- (5) GUI font is not scaling anymore
+- (6) Start to implement ResolutionHandler with tests
+- GUI font is not scaling anymore
 - TempMessage now uses DejaVuSans-10-NoScale
 - Disable TempMessage to fix a segfault
 - Auto-save configuration on fullscreen/resolution changes
