@@ -1,5 +1,12 @@
 2016-12-28  Jérôme Pasquier  <rainbru@free.fr>
 
+	* src/client/ResolutionHandler.cpp (probeFromWindow): implement a first
+	version.
+	* src/client/ResolutionHandler_Test.cpp (fromWindowFailWithNullPointer):
+	add a probeFromWindow test for a NULL pointer.
+	* src/client/GameEngine.hpp (getRendererWindow): rename to
+	getRenderWindow to fix a typo.
+
 	* src/client/ResolutionHandler.cpp (probeFromCfg): remove unneeded
 	function.
 	* src/client/GameEngine.hpp (getRenderSystem): add new getter.
